--- a/src/webapp/WEB-INF/pages/start.html
+++ b/src/webapp/WEB-INF/pages/start.html
@@ -9,27 +9,10 @@
 </head>
 
 <body>
-  <h1>Задание 2.2.2</h1>
-  <ul>
-    <li>Создайте еще один контроллер, замаппленный на /cars.</li>
-    <li>Создайте модель Car с тремя произвольными полями.</li>
-    <li>Создайте список из 5 машин.</li>
-    <li>Создайте сервис с методом, который будет возвращать указанное число машин из созданного списка.</li>
-    <li>Создайте страницу cars.html. Реализуйте создание таблицы с машинами из сервиса с помощью thymeleaf.</li>
-    <li>При запросе /cars выводить весь список. При запросе /cars?count=2 должен отобразиться список из 2 машин, при
-      /cars?count=3 - из 3, и тд. При count ≥ 5 выводить весь список машин.</li>
-  </ul>
+  <h1>Задание 2.3.1 (Создаем полное CRUD приложение)</h1>
   <ul>
     <li>
-      <a href="hello">Запуск начального HelloController</a>
-    </li>
-    <li>
-      <a th:href="@{/cars}">Запуск CarController</a>
-    </li>
-  </ul>
-  <ul>
-    <li>
-      <a href="https://github.com/vocxod/PP_2_2_2_spring-mvc">github решения</a>
+      <a href="https://github.com/vocxod/PP231">github решения</a>
     </li>
   </ul>
 
