add User model and home.html

--- a/src/webapp/WEB-INF/pages/start.html
+++ b/src/webapp/WEB-INF/pages/start.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Home page</title>
-  <link rel="shortcut icon" type="image/x-icon" th:href="@{/favicon.ico}">
+  <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/favicon.ico}">
   <!-- Bootstrap Core CSS -->
   <link th:href="@{/resources/css/bootstrap.min.css}" rel="stylesheet">
   <!-- <link href="@{/styles/cssandjs/main.css}" rel="stylesheet" /> -->
