--- a/src/webapp/WEB-INF/pages/home.html
+++ b/src/webapp/WEB-INF/pages/home.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="@{/favicon.ico}">
+  <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/favicon.ico}">
   <!-- Bootstrap CSS -->
   <link th:href="@{/resources/css/bootstrap.min.css}" rel="stylesheet">
   <link th:href="@{/resources/css/main.css}" rel="stylesheet">
